<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_fish"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/fish" />
        <item
            android:id="@+id/id_naj"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/naj" />
        <item
            android:id="@+id/id_snasti"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/snasti" />
        <item
            android:id="@+id/id_prikorm"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/prikorm" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/id_history"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/history" />
            <item
                android:id="@+id/id_advice"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/advice" />
        </menu>
    </item>

</menu>
